ghc-4335c07/testsuite/tests/indexed-types/should_compile/T8002a.hs
{-# LANGUAGE UndecidableInstances #-}
{-# LANGUAGE TypeFamilies #-}

module T8002a where

import T8002b

class QA a where
   type QRep a
   type QRep a = QRep (Maybe a)

instance QA () where
   type QRep () = ()
