ghc-4335c07/testsuite/tests/indexed-types/should_fail/T13092c/T13092c_3.hs
{-# LANGUAGE TypeFamilies #-}

module T13092c_3 (F) where

import T13092c_2
